--- a/convergent_bound_bgd.ipynb
+++ b/convergent_bound_bgd.ipynb
@@ -38,7 +38,7 @@
     "    2. **Why the second occurence?**\n",
     "    After the first occurence, the second occurence will change the sign back to the original sign, causing an overall oscillatory behaviour around the convergent limit. The bounds of these oscillations will serve as our bound for the limit point.\n",
     "\n",
-    "7. These two values will serve as our upper and lower bounds on the convergent limit. To view a graphical explanation, click here -->[https://github.com/RazzberryBoy26/Learning-ML/blob/Week-2/graphical_algorithm.png].\n",
+    "7. These two values will serve as our upper and lower bounds on the convergent limit. To view a graphical explanation, click here -->https://github.com/RazzberryBoy26/Learning-ML/blob/Week-2/graphical_algorithm.png.\n",
     "**Note : X - axis denotes t(sequence counter) and Y - axis denotes $\\theta_{j}$.**\n",
     "\n",
     "8. Now let's go through each case given in point 3 and see what happens:\n",
