--- a/Logistic_regression.ipynb
+++ b/Logistic_regression.ipynb
@@ -247,7 +247,7 @@
     "\n",
     "4. Upon the naive run of the algorithm, I found that entries of Z matrix were overflowing. Had not scaled X earlier. Hence, learned scaling X is a MUST in any algorithm. \n",
     "\n",
-    "5. Didn't put the -ve sign with the Hessian computation $H = -X^{T}diag(g^{i}(1 - g^{i}))X$ earlier. This led to huge blowouts of $\\theta$ values, in the order of $10^13$. Significant reduction in values upon correcting the mistake was observed, but the algorithm was far from converging.\n",
+    "5. Didn't put the -ve sign with the Hessian computation $H = -X^{T}diag(g^{i}(1 - g^{i}))X$ earlier. This led to huge blowouts of $\\theta$ values, in the order of $10^{13}$. Significant reduction in values upon correcting the mistake was observed, but the algorithm was far from converging.\n",
     "\n",
     "6. A pure Newton-Raphson step (yeah, that's what it's called) can be huge. A decaying factor is needed to dampen the step and prevent any form of overshooting. Hence, added a decay constant along with the step. Again, significant reduction in divergence was seen.\n",
     "\n",
